--- a/docs/howto/ht001.ipynb
+++ b/docs/howto/ht001.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "18c84d99-1c68-44fb-aeb7-013e65fd45ba",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
        " 'parallel_find': True}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "8a69b063-56ce-465e-a944-3f5ff2f01d00",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "berfore:  C~\n",
-      "during:  C~\n",
+      "during:  L~\n",
       "after:  C~\n"
      ]
     }
@@ -86,7 +86,7 @@
    "source": [
     "print('berfore: ', h5tbx.get_config('ureg_format'))\n",
     "\n",
-    "with h5tbx.set_config(ureg_format='C~'):\n",
+    "with h5tbx.set_config(ureg_format='L~'):\n",
     "    pass\n",
     "    print('during: ', h5tbx.get_config('ureg_format'))\n",
     "\n",
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "22883f33-37c7-4317-80f0-4cd28ead53da",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<h5rdmtoolbox._cfg.set_config at 0x1d7a90d51c0>"
+       "<h5rdmtoolbox._cfg.set_config at 0x1797c1d3a90>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
