doc update and version update [no-ci]

--- a/docs/howto/ht001.ipynb
+++ b/docs/howto/ht001.ipynb
@@ -5,7 +5,7 @@
    "id": "73496983-6bd2-413e-ae07-d8e090db51ae",
    "metadata": {},
    "source": [
-    "# ... change the configuration of the package `h5rdmtoolbox`?"
+    "# ... change the package settings?"
    ]
   },
   {
