housekeeping and iproving html_repre

--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "2e3d59ca-8de0-4821-bdb7-27a99b259b8d",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
        "\t\tType of data in file. Can be numerical or experimental"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "8dfd1a89-ba4d-4333-bed4-dbd9dae8fadd",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
        "using(\"h5rdmtoolbox-tuturial-convention\")"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "bc760582-760d-45dc-ae88-8346d3cfb387",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "105511eb-f632-471a-b53c-7945440da8f4",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "0669ccff-9563-4a0c-ab66-e07224f8d42b",
    "metadata": {},
    "outputs": [
@@ -427,12 +427,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--48395117800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--48395117800\">\n",
+       "                        <input id=\"group-ds--5560237500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5560237500\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">data_type : numerical</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "599c91e0-fded-4cf7-9706-d5dbf1eddb65",
    "metadata": {},
    "outputs": [],
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "a709898e-5bac-4773-8dac-500210c962ba",
    "metadata": {},
    "outputs": [
@@ -495,7 +495,7 @@
        "\t\tType of data in file. Can be numerical or experimental"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "cdfebdc5-3cd1-41c6-a370-ae1b884d9960",
    "metadata": {},
    "outputs": [
@@ -717,12 +717,12 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--180037974800\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--180037974800\">\n",
+       "                        <input id=\"group-ds--5605502000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--5605502000\">\n",
        "                        /<span>(0)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li>\n",
        "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "79efb889-ff4c-4b8e-99a9-782d3bd4a4f5",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "73415654-05b1-4d85-a8f5-51398fdd7b93",
    "metadata": {},
    "outputs": [],
@@ -791,17 +791,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "b37888a9-c963-420a-b40b-45495212721b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$pintquantity', '$pintunit', '$reference', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
+       "dict_keys(['$none', '$datetime', '$type', '$in', '$orcid', '$pintquantity', '$pintunit', '$ref', '$url', '$bibtex', '$minlength', '$maxlength', '$regex', '$standard_name', '$standard_name_table'])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0641aa3c-152f-4f78-81b3-c6ddf4e9e531",
    "metadata": {
     "scrolled": true
@@ -840,7 +840,7 @@
        "\t\tType of data in file. Can be numerical or experimental\n",
        "    * \u001b[1mcontact\u001b[0m:\n",
        "\t\tContact or responsible person represented by an ORCID-ID.\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000014C823CD6D0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001D438ECF070>):\n",
        "\t\tThe standard name table of the convention.\n",
        "    * \u001b[3mcomment\u001b[0m (default=None):\n",
        "\t\tA comment to further describe the data.\n",
@@ -872,7 +872,7 @@
        "\t\tWeb resources servering as references for the data"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,15 +894,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "bff929ab-d133-48bd-8c16-b7bd3080a426",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PositionalStdAttr(\"standard_name\"): \"Standard name of the dataset. If not set, the long_name attribute must be given.\">"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv.properties[h5tbx.Dataset]['standard_name']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7f2295ae-7b1f-431f-8168-cf340b80adc2",
    "metadata": {},
    "outputs": [
@@ -961,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a0b03b0c-8d48-46d3-8c0e-98d5dc758650",
    "metadata": {},
    "outputs": [
@@ -971,7 +984,7 @@
        "using(\"h5py\")"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
