--- a/docs/conventions/standard_name_convention.ipynb
+++ b/docs/conventions/standard_name_convention.ipynb
@@ -10,21 +10,21 @@
     "The \"Standard Name Convention\" is one realization of a convention promoted by the toolbox. The key standard attributes are \n",
     "\n",
     " - `standard_name`: A human- and machine-readable standardized name (identifier) of a dataset based on construction rules and documented in a \"Standard name table\",\n",
-    " - `standard_name_table`: List of `standard_name` together with the base unit (SI) and a comprehensive desscrption. It also includes additional infomration about how a `standard_name` can be transformed into a new `standard_name`\n",
-    " - `units`: The unit attribute of a dataset. Must not be SI-unit but must be convertable to it and then match the registered SI-unit in the Standard name table,\n",
-    " - `long_name`: An alternative name if no `standard_name` is applicable .\n",
+    " - `standard_name_table`: List of `standard_name` together with the base unit (SI) and a comprehensive description. It also includes additional information about how a `standard_name` can be transformed into a new `standard_name`\n",
+    " - `units`: The unit attribute of a dataset. Must not be SI-unit, but must be convertible to it and then match the registered SI-unit in the Standard name table,\n",
+    " - `long_name`: An alternative name if no `standard_name` is applicable.\n",
     "\n",
-    "## Concept and implications\n",
+    "## Concept and its implications\n",
     "The concept behind it is quite simple:\n",
-    "- The standard name is a human readable (of course) and interpretable identifier of the dataset. This means, the content of the dataset can be interpreted by the standard_name alone.\n",
+    "- The standard name is a human-readable (of course) and interpretable identifier of the dataset. This means, the content of the dataset can be interpreted by the standard_name alone.\n",
     "- A further description can be found in the so-called \"Standard Name table\". It is a table with all allowed standard names, their description *and* physical unit. The later must be provided with the dataset, too.\n",
     "\n",
-    "This concept is first introduced by the climate and forecast community and is called [CF-convention](http://cfconventions.org/). The `h5RDMtoolbox` adopts the concept and implemented a general version of the concept so users can define their own discipline- or problem-specific standard name convention.\n",
+    "This concept is first introduced by the climate and forecast community and is called [CF-convention](http://cfconventions.org/). The `h5RDMtoolbox` adopts the concept and implemented a general version of the concept, so users can define their own discipline- or problem-specific standard name convention.\n",
     "\n",
     "Main benefits of the convention are:\n",
-    "- humand and machine interpretation of dataset content\n",
-    "- validation of dataset identifieres (standard_name) and their units\n",
-    "- unit-aware processing of data\n",
+    "- Human and machine interpretation of dataset content,\n",
+    "- validation of dataset identifiers (standard_name) and their units\n",
+    "- unit-aware processing of data.\n",
     "\n",
     "This chapter walks you through the concept and shows how to apply it"
    ]
@@ -77,6 +77,9 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (name: cf-standard-name-table.xml, version_number: 79, last_modified: 2022-03-19T15:25:54Z, institution: Centre for Environmental Data Analysis, contact: support@ceda.ac.uk, version: v79, url: https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml)</li>"
+      ],
       "text/plain": [
        "<StandardNameTable: (name: cf-standard-name-table.xml, version_number: 79, last_modified: 2022-03-19T15:25:54Z, institution: Centre for Environmental Data Analysis, contact: support@ceda.ac.uk, version: v79, url: https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml)>"
       ]
@@ -107,6 +110,17 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-x_wind6022650300\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_wind6022650300\">\n",
+       "        x_wind</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
        "<StandardName: \"x_wind\" [m/s] \"x\" indicates a vector component along the grid x-axis, positive with increasing x. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.).>"
       ]
@@ -194,6 +208,9 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li>"
+      ],
       "text/plain": [
        "<StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)>"
       ]
@@ -423,6 +440,17 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-x_velocity6180557700\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6180557700\">\n",
+       "        x_velocity</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
        "<StandardName: \"x_velocity\" [m/s] Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.>"
       ]
@@ -454,6 +482,17 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-derivative_of_x_velocity_wrt_x_coordinate6198333500\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-derivative_of_x_velocity_wrt_x_coordinate6198333500\">\n",
+       "        derivative_of_x_velocity_wrt_x_coordinate</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : 1/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
        "<StandardName: \"derivative_of_x_velocity_wrt_x_coordinate\" [1/s] Derivative of x_velocity with respect to x_coordinate. Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector. Coordinate refers to the spatial coordinate. Coordinate is a vector quantity. X indicates the x-axis component of the vector.>"
       ]
@@ -475,6 +514,17 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-square_of_static_pressure6222083600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-square_of_static_pressure6222083600\">\n",
+       "        square_of_static_pressure</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : Pa**2</li>           <li style=\"list-style-type: none; font-style: italic\">description : Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
        "<StandardName: \"square_of_static_pressure\" [Pa**2] Square of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.>"
       ]
@@ -496,6 +546,17 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-arithmetic_mean_of_static_pressure6235392600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-arithmetic_mean_of_static_pressure6235392600\">\n",
+       "        arithmetic_mean_of_static_pressure</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : Pa</li>           <li style=\"list-style-type: none; font-style: italic\">description : Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
        "<StandardName: \"arithmetic_mean_of_static_pressure\" [Pa] Arithmetic mean of static_pressure. Static pressure refers to the force per unit area exerted by a fluid. Pressure is a scalar quantity.>"
       ]
@@ -531,7 +592,7 @@
        "\u001b[1mConvention(\"standard name convention\")\u001b[0m\n",
        "contact: https://orcid.org/0000-0001-8729-0482\n",
        "  File.__init__():\n",
-       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x0000021ECE40FFA0>):\n",
+       "    * \u001b[3mstandard_name_table\u001b[0m (default=<h5rdmtoolbox.conventions.consts.DefaultValue object at 0x000001B4E9FC3340>):\n",
        "\t\tThe standard name table of the convention.\n",
        "  Group.create_dataset():\n",
        "    * \u001b[1munits\u001b[0m:\n",
@@ -642,23 +703,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "f27c8aa3-c074-4b69-ae35-f29b43bde04b",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-x_velocity6328187600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity6328187600\">\n",
+       "        x_velocity</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul>"
+      ],
       "text/plain": [
-       "'Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.'"
+       "<StandardName: \"x_velocity\" [m/s] Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "snt['x_velocity'].description"
+    "snt['x_velocity']"
    ]
   },
   {
@@ -671,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "9de466f1-a31c-4067-91a4-6562d1389ceb",
    "metadata": {},
    "outputs": [
@@ -881,20 +953,27 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--131429962000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--131429962000\">\n",
+       "                        <input id=\"group-ds--48639946300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--48639946300\">\n",
        "                        /<span>(1)</span></label>\n",
        "                  \n",
        "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8.0a0</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <a href=\"https://doi.org/10.5281/zenodo.8276716\"><img src=\"https://zenodo.org/badge/DOI/10.5281/zenodo.8276716.svg\" alt=\"DOI\"></a></li>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.8rc1</li><li style=\"list-style-type: none; font-style: italic\">standard_name_table : <li style=\"list-style-type: none; font-style: italic\">StandardNameTable: (institution: my_institution, contact: https://orcid.org/0000-0001-8729-0482, valid_characters: [^a-zA-Z0-9_], pattern: ^[0-9 ].*, last_modified: 2023-08-16_11:05:00, version: v1.1, zenodo_doi: 10.5281/zenodo.8276716)</li></li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/u-131430757000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/u-131430759900\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/u-131430759900\">u</label>\n",
+       "                <ul id=\"ds-1-/u-48640559900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/u-48640562500\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/u-48640562500\">u</label>\n",
        "                    <span class=\"h5tb-dims\">(3) [int32]</span>\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "             italic\">standard_name: x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">standard_name : <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "    <li>\n",
+       "        <input id=\"group-x_velocity48641615600\" type=\"checkbox\" checked>\n",
+       "        <label style=\"font-weight: bold\" for=\"group-x_velocity48641615600\">\n",
+       "        x_velocity</label>\n",
+       "        <ul class=\"h5tb-attr-list\">\n",
+       "           <li style=\"list-style-type: none; font-style: italic\">units : m/s</li>           <li style=\"list-style-type: none; font-style: italic\">description : Velocity refers to the change of position over time. Velocity is a vector quantity. X indicates the x-axis component of the vector.</li>      </il>\n",
+       "    </ul>\n",
+       "</ul></li><li style=\"list-style-type: none; font-style: italic\">units : km/s</li>\n",
        "                </ul>\n",
        "                </ul>\n",
        "</li>\n",
@@ -911,32 +990,17 @@
    ],
    "source": [
     "with h5tbx.File() as h5:\n",
-    "    h5.create_dataset('u', data=[1,2,3], standard_name='x_velocity', units='m/s')\n",
-    "    h5.dump()\n",
-    "\n",
-    "    u = h5.u[()]"
+    "    h5.create_dataset('u', data=[1,2,3], standard_name='x_velocity', units='km/s')\n",
+    "    h5.dump()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "eeb94a83-dab4-4402-8e83-e0dd5ebd8ee0",
+   "execution_count": null,
+   "id": "c4f2c820-7365-40ac-99d6-c18aa2d9ddc6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "using(\"h5py\")"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h5tbx.use(None)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
