--- a/docs/conventions/standard_attributes_and_conventions.ipynb
+++ b/docs/conventions/standard_attributes_and_conventions.ipynb
@@ -786,7 +786,7 @@
     "\n",
     "### Validators\n",
     "\n",
-    "Here is a list of available validators. An advanced introduction into details can be found in a [separate chapter](validators.ipynb)"
+    "Here is a list of available validators. An advanced introduction into details can be found in a [separate chapter](introduction_to_validators.ipynb)"
    ]
   },
   {
