--- a/docs/wrapper/DatasetSlicing.ipynb
+++ b/docs/wrapper/DatasetSlicing.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# Working with HDF5 datasets\n",
     "\n",
-    "Unlike the h5py package, which returns `numpy.ndarray` when accessing the values of datasets, the `h5rdmtoolbox` returns `xarray.DataArray` objects ([https://xarray.pydata.org/]). The `xarray.DataArray` object allows to carry attributes with the numpy-like multi-dimensional array. It also supports the concept of dimensions and coordinates, allowing to assign the array axis with meaning ful (meta) data.\n",
+    "Unlike the h5py package, which returns `numpy.ndarray` when accessing the values of datasets, the `h5rdmtoolbox` returns [`xarray.DataArray` objects](https://xarray.pydata.org/). The `xarray.DataArray` object allows to carry attributes with the numpy-like multi-dimensional array. It also supports the concept of dimensions and coordinates, allowing to assign the array axis with meaning ful (meta) data.\n",
     "\n",
     "Let's dive into it and explore the practical implications of retrieving `xarray.DatArray`:"
    ]
