--- a/docs/wrapper/Extensions.ipynb
+++ b/docs/wrapper/Extensions.ipynb
@@ -1057,9 +1057,9 @@
    "metadata": {},
    "source": [
     "### Registration of standard attributes\n",
-    "During runtime, we can define so-called \"standard attributes\" and assign them to group or dataset classes. A more detailed explanation can be found [here](../conventions/standard_attributes.ipynb).\n",
+    "During runtime, we can define so-called \"standard attributes\" and assign them to group or dataset classes. A more detailed explanation can be found [here](../conventions/standard_attributes_and_conventions.ipynb).\n",
     "\n",
-    "In the following example, the standard attribute shall write user information to attributes. For this the name and the orcid is expected. The new standard attribute shall be assigned to the `Dataset` class of the current wrapper:"
+    "In the following example, the standard attribute shall write user information to attributes. For this, the name and the ORCID is expected. The new standard attribute shall be assigned to the `Dataset` class of the current wrapper:"
    ]
   },
   {
@@ -1368,7 +1368,7 @@
    "metadata": {},
    "source": [
     "### Registration of datasets\n",
-    "We can also \"register\" dataset accessors. In the following example we add \"device\" as a \"property with methods\". So \"device\" seems to be a property which has a method \"add\". Such an implementation faclitates the interaction with HDF data, too. Note, that this \"property-like\" accessor is available for all `Dataset` objects from know on in this session:"
+    "We can also \"register\" dataset accessory. In the following example, we add \"device\" as a \"property with methods\". So \"device\" seems to be a property which has a method \"add\". Such an implementation facilitates the interaction with HDF data, too. Note, that this \"property-like\" accessory is available for all `Dataset` objects from now on in this session:"
    ]
   },
   {
